# rust-backend

./: .env  Cargo.toml
apps/api/: Cargo.toml
apps/api/src/: main.rs  routes.rs
apps/api/src/handlers/: auth_handler.rs
apps/api/src/routes/: auth_route.rs
libs/application/: Cargo.toml
libs/application/src/dto/auth/: login_request.rs  login_response.rs
libs/core/: Cargo.toml
libs/domain/: Cargo.toml
libs/domain/src/: lib.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: lib.rs
libs/infrastructure/src/repositories/: user_repository.rs
