[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Kết nối các thư viện nội bộ
infrastructure = { path = "../../libs/infrastructure" }
domain = { path = "../../libs/domain" }
core-lib = { path = "../../libs/core" }
