[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Các lib nội bộ
application = { path = "../../libs/application"}
core-lib = { path = "../../libs/core" }
domain = { path = "../../libs/domain" }
infrastructure = { path = "../../libs/infrastructure" }

# Lib bên ngoài dùng từ workspace
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
dotenvy = "0.15"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }